routes setup, spacing fixes dash expense lists

--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -173,20 +173,26 @@
 }
 
 .expense-item {
-  margin-bottom: 16px;
+  margin-bottom: 20px;
 }
 
 .expense-item {
   display: grid;
   grid-template-columns: 1fr 5fr 5fr 5fr;
-  text-align: center;
 }
-
+.category-name{
+  min-width: 150px;
+}
 /*Expense breakdown list Mobile*/
 @media screen and (max-width: 600px) {
+  .expense-list-container{
+    display: flex;
+    justify-content: unset;
+  }
   .expense-item {
     grid-template-columns: 1fr 1fr 1fr;
     gap: 8px;
+    text-align: center;
   }
 
   .category-indicator {
